--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -15,8 +15,18 @@ body {
   margin: 20px 0;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#datapicker__input {
+  width: 200px;
 }
