--- a/src/components/datapicker-main/datapicker-main.css
+++ b/src/components/datapicker-main/datapicker-main.css
@@ -5,3 +5,20 @@
 .calendar__table > * {
   text-align: center;
 }
+
+.currentDay {
+  /* color: rgb(57, 57, 219);
+  background-color: white;
+  border-radius: 50%; */
+}
+
+.calendar__table tbody td:hover {
+  cursor: pointer;
+  color: white;
+  background-color: rgb(90, 90, 90);
+  border-radius: 50%;
+}
+
+.calendar__table td::selection {
+  background: transparent;
+}
