--- a/src/components/datapicker-main/datapicker-main.css
+++ b/src/components/datapicker-main/datapicker-main.css
@@ -12,6 +12,12 @@
   border-radius: 50%; */
 }
 
+.eventDay {
+  color: rgb(57, 57, 219);
+  background-color: rgb(220, 223, 67);
+  border-radius: 50%;
+}
+
 .calendar__table tbody td:hover {
   cursor: pointer;
   color: white;
@@ -21,4 +27,16 @@
 
 .calendar__table td::selection {
   background: transparent;
+}
+
+.tooltip {
+  position: fixed;
+  padding: 10px 20px;
+  border: 1px solid #b3c9ce;
+  border-radius: 4px;
+  text-align: center;
+  font: italic 14px/1.3 sans-serif;
+  color: #333;
+  background: #fff;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
 }
