--- a/src/components/datapicker-main/datapicker-main.css
+++ b/src/components/datapicker-main/datapicker-main.css
@@ -6,15 +6,15 @@
   text-align: center;
 }
 
-.currentDay {
-  /* color: rgb(57, 57, 219);
-  background-color: white;
-  border-radius: 50%; */
-}
-
 .eventDay {
   color: rgb(57, 57, 219);
   background-color: rgb(220, 223, 67);
+  border-radius: 50%;
+}
+
+.currentDay {
+  color: rgb(57, 57, 219);
+  background-color: white;
   border-radius: 50%;
 }
 
